# bachelor-star-ea

./: .gitignore  README.md  analyse_pp510.sh  environment.yml  generate_pp510.sh  multifold-ea.ipynb  multifold_pp510.sh  omnifold.py  plot-ea.ipynb  pyproject.toml  pythia8_generate-tree.ipynb  requirements.txt  unfolding-Bayes-ea.ipynb
cpp/: S0pT1.cpp  TPCacceptance.cpp  TPCandTOFacceptance.cpp  TPCandTOFefficiency.cpp  applyUM.cpp  deconvoluted1Dunfolding.cpp  extract_components.cpp  generate_events.cpp  normalizeUM.cpp  s0pt1.cpp  smearing.cpp  spherocities.cpp
scripts/: analyze.py  generate_mc.py  unfold.py
src/star_ea/: __init__.py  io.py  multifold.py  observables.py  plotting.py  simulation.py
src/star_ea.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_io.py  test_multifold.py  test_observables.py  test_simulation.py
