[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "star-ea"
version = "0.1.0"
description = "Event activity observables in pp collisions at STAR, with MultiFold unfolding"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "torch>=2.0",
    "scikit-learn>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
root = ["uproot>=5.0"]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
